fix(ctc): Rule 38 + Rule 29C post-merge cleanups
Rule 38 — CaseUtil renamed to CtcCaseHelper:
- CaseUtil had no REST methods left after C2 REST→direct conversion;
  only non-REST JSON helpers remained (extractPoaHolderUuids,
  extractComplainantUuids, extractRespondentUuids + getCase via CaseApi).
  Rule 38 requires the original util class to go away; non-REST
  behaviour moves to a renamed helper class.
- CaseUtil.java deleted; CtcCaseHelper.java (bean: ctcCaseHelper) created.
- CtcApplicationValidator, PaymentUpdateService, and their tests updated.

Rule 29C — WorkflowService delegates to canonical WorkflowUtil:
- callWorkFlow() re-implemented canonical body; now delegates to
  workflowUtil.callWorkFlow() per Rule 29C.
- ServiceRequestRepository + ObjectMapper injections removed (only
  callWorkFlow used them; delegation to canonical makes them dead).
- getWorkflowFromProcessInstance() deleted (dead code — never called
  outside WorkflowService; Rule 37 sweep).
- getSearchURLForProcessInstanceWithParams() deleted (private, never
  called; Rule 37 sweep).
- WorkflowServiceTest rewritten: mocks WorkflowUtil, verifies
  delegation, removes dead-method tests.

Build: 1034 tests, 0 failures.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>